--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -1,4 +1,4 @@
-*{padding:0; margin:0 auto; list-style:none; font-family: "¸¼Àº°íµñ"}
+*{padding:0; margin:0 auto; list-style:none; font-family: "ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½"}
 html,body{height: 100%}
 
 .ui-widget-overlay{background:#000}	
@@ -30,7 +30,7 @@ header .menu ul li:hover::after{right:0;} */
 header .icon{width: 143px; float:left;}
 header .icon a{text-decoration:none; color: inherit; float:left; }
 
-/* Ä«Å×·Î±â  dialog */
+/* Ä«ï¿½×·Î±ï¿½  dialog */
 .category{width:100%; height: 100%; float:left; position: relative; display:none;}
 .category ul{text-align:center;  padding: 0;}
 .category ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left; font-size:26px;  color:#fff; background:#FFCA28;  cursor:pointer; transition:0.4s;  font-weight: bold;}
@@ -42,8 +42,8 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #profile .profilemenu ul li{text-align:center; line-height:50px; border-bottom:1px solid #FF8F00; color:#fff; font-size:18px;font-weight:bold;transition:0.4s;}
 #profile .profilemenu ul li #chatWindow{width:100%; float:left; color:#000; overflow: scroll; overflow-x:hidden; font-size:14px;}
 #profile .profilemenu ul li #submit{line-height: 40px;}
-#profile .profilemenu ul li #partnerId{background: #fff; font-size:14px;}
-#profile .profilemenu ul li #message{background: #fff; font-size:14px;}
+#profile .profilemenu ul li #partnerId{background: #fff; color:black; font-size:14px;}
+#profile .profilemenu ul li #message{background: #fff; color:black;font-size:14px;}
 #profile .profilemenu ul li:nth-child(1){position: relative;}
 #profile .profilemenu ul #transactionsEvent{cursor:pointer;}
 #profile .profilemenu ul #cashTransactionsEvent{cursor:pointer;}
@@ -175,7 +175,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #memberup .memberupform{width:100%;float:left; padding:.5em 1em;} 
 #memberup .memberupform form{width:100%; float:left}
 #memberup .memberupform form ul{width:100%; float:left;}
-#memberup .memberupform form ul li{float:left; border:none; height: 50px;}
+#memberup .memberupform form ul li{float:left; border:none; height: 50px; font-size:18px;font-weight:bold;}
 #memberup .memberupform form ul li:nth-child(odd){width:20%; color:#fff; border:1px solid #FF8F00;  background:#FFCA28; text-align: center; line-height: 50px; }
 #memberup .memberupform form ul li:nth-child(even){width:80%;}
 #memberup .memberupform form ul li:nth-child(2) input{width:70%; border:none; border-left:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00; }
@@ -193,14 +193,14 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #loginform{width:100%; height: 100%; float:left; position: relative; padding:.5em  1em;}
 #loginform ul li:nth-child(1){margin-top:0;}
 #loginform ul li:nth-child(2){margin-top:0;}
-#loginform ul li{float:left; margin-top:20px;}
+#loginform ul li{float:left; margin-top:20px; font-size:18px;font-weight:bold;}
 #loginform ul li:nth-child(odd){width:20%; text-align: center;  background:#FFCA28; border:1px solid #FF8F00; color:#fff; line-height:38px;}
 #loginform ul li:nth-child(even){width:80%;}
 #loginform ul li input{width:100%; height: 40px; background:#FFCA28; border:1px solid #FF8F00;}
-#loginform .loginsubmit{width:100%; height:40px; float:left}
+#loginform .loginsubmit{width:100%; height:40px; float:left; font-size:18px;font-weight:bold;}
 #loginform .loginsubmit input[type=button]{width:100%; height: 100%; background:#FFCA28; border:1px solid #FF8F00; color:#fff; text-align: center; margin-top:20px; }
 #loginform .loginsubmit input[name=searchpassword]{margin-top:10px;}
-/* °Å·¡ ³»¿ª dialog */
+/* ï¿½Å·ï¿½ ï¿½ï¿½ï¿½ï¿½ dialog */
 
  .Transactions{display:none;}
 #Transactionsfrom{ width:100%; height:530px; float:left;   position: relative; }
@@ -211,7 +211,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #Transactionsfrom table tr td{width:15%; height:30px ;line-height:30px;  float:left;}
 #Transactionsfrom table tr td:nth-child(5){width:10%;} 
 
-/* ¸¶ÀÏ¸®Áö ³»¿ª dialog */
+/* ï¿½ï¿½ï¿½Ï¸ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ dialog */
 .Mileagetransactions{display:none}
 
 #Mileagetransactionsform{width:100%; height:530px; float:left;   position: relative;  }
@@ -239,6 +239,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 	margin-right:50px;
 	transition:0.4s;
 	cursor:pointer;
+	font-size:30px; font-weight:bold;
 }
 #memberform .memberupdate:hover{
 	background:#FFB300;
@@ -257,13 +258,14 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 	float:left;
 	transition:0.4s;
 	cursor:pointer;
+	font-size:30px; font-weight:bold;
 }
 
 #memberform .memberdrop:hover{
 	background:#FFB300;
 }
 
-/* ºñ¹Ð¹øÈ£ È®ÀÎ dialog */
+/* ï¿½ï¿½Ð¹ï¿½È£ È®ï¿½ï¿½ dialog */
 .passwordCheck{display:none;}
 .userDelete{display:none;}
 #passwordCheckform{width:100%; height: 100%; float:left; position: relative; }
@@ -273,7 +275,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #passwordCheckform p span{color:#FF8F00;}
 #passwordCheckform {width:100%; text-align: center; margin-top:30px;}
 #passwordCheckform input{height:30px; }
-#passwordCheckform #updateform{margin-top:30px;}
+#passwordCheckform #updateform{margin-top:30px; }
 #passwordCheckform #deleteform{margin-top:30px;}
 #passwordCheckform input[type=button]{width:120px; height:30px; background:#FFCA28; border:1px solid #FF8F00; color:#fff; transition:0.4s; cursor:pointer;  }
 #passwordCheckform input[type=button]:hover{background:#FFB300}
@@ -282,18 +284,18 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 /* MeberUpdate */
 .privacy{width:60%; height: 600px; float:left; text-align: center; position: absolute; top: 0;  left:50%; transform:translate(-50%);}
 .privacy h3{width:100% ;  margin-top:30px; border:1px solid #ff8f00; height: 40px; background:#FFCA28; color:#fff; line-height: 40px;}
-.privacy ul li{float:left;}
+.privacy ul li{float:left; font-size:18px;}
 .privacy ul li:nth-child(odd){width:30%;  line-height: 50px;  text-align: center; background:#FFCA28; color:#fff; border:1px solid #FF8F00;  }
 .privacy ul li:nth-child(even){width:69%; height: 50px;  border:1px solid #ff8f00;}
 .privacy ul li input{width:100%; float:left; height: 50px; border:none; } 
 .privacy .memberupdatesubmit{width:100%; float:left; margin-top:30px; }
-.privacy .memberupdatesubmit input[type=button]{width:150px; height: 50px; background:#FFCA28; color:#fff; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
-.privacy .memberupdatesubmit input:first-child{width:150px; height: 50px; background:#FFCA28; color:#Fff; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
-.privacy .memberupdatesubmit input[type=button]:hover{background:#FFB300;}
+.privacy .memberupdatesubmit input[type=button]{width:150px; height: 50px; background:#FFCA28; color:#fff; border:1px solid #FF8F00; transition:0.4s; cursor:pointer; font-size:18px; font-weight:bold;}
+.privacy .memberupdatesubmit input:first-child{width:150px; height: 50px; background:#FFCA28; color:#Fff; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;font-size:18px;font-weight:bold}
+.privacy .memberupdatesubmit input[type=button]:hover{background:#FFB300; }
 
 .passwordchage{width:60%; height: 400px; float:left; text-align: center; position: absolute; top: 400px;  left:50%; transform:translate(-50%);}
 .passwordchage h3{width:100% ;  margin-top:30px; border:1px solid #ff8f00; height: 40px; background:#FFCA28; color:#fff; line-height: 40px;}
-.passwordchage ul li{float:left;}
+.passwordchage ul li{float:left; }
 .passwordchage ul li:nth-child(1){width:30%; line-height:154px; background:#FFCA28; color:#fff; border:1px solid #FF8F00;}
 .passwordchage ul li:nth-child(2){width:69%;}
 .passwordchage ul li ul{width:100%; float:left;}
@@ -303,35 +305,35 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 .passwordchage ul li ul li:nth-child(3){width:100%; float:left;}
 .passwordchage ul li ul li input{width:100%; float:left; height: 50px; border:none; } 
 .passwordchage .passwordchagesubmit{width:100%; float:left; margin-top:30px; }
-.passwordchage .passwordchagesubmit input[type=button]{width:150px; height: 50px; background:#FFCA28; color:#fff; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
+.passwordchage .passwordchagesubmit input[type=button]{width:150px; height: 50px; background:#FFCA28; color:#fff; border:1px solid #FF8F00; transition:0.4s; cursor:pointer; font-size:18px;font-weight:bold}
 .passwordchage .passwordchagesubmit input:first-child{width:150px; height: 50px; background:#FFCA28; color:#fff; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
 .passwordchage .passwordchagesubmit input[type=submit]:hover{background:#FFB300;}
 .passwordchage .passwordchagesubmit input[type=button]:hover{background:#FFB300;}
 
 
-/* ºñ¹Ð¹øÈ£ Ã£±â */
+/* ï¿½ï¿½Ð¹ï¿½È£ Ã£ï¿½ï¿½ */
 #passwordFindForm{width:700px; height:500px;  box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5); position: absolute; top:50%; left:50%; transform:translate(-50%,-50%); }
-#passwordFindForm .passwordform{width:100%; height: 100%; float:left; position:relative; text-align:center; margin-top:122px;}
+#passwordFindForm .passwordform{width:100%; height: 100%; float:left; position:relative; text-align:center; margin-top:122px; }
 #passwordFindForm .passwordform img{background:#FFD54F; border-radius:100%; padding:5px; position: absolute; left:227px; top:0;}
 #passwordFindForm h1{width:100%; float:left; color:#555555; margin-top:15px; margin-bottom:15px; line-height:40px; text-align: center; position: relative; }
 #passwordFindForm .passwordform p{color:#999;}
 #passwordFindForm .passwordform p span{color:#FF8F00;}
-#passwordFindForm .passwordform input{width:240px; height:45px; margin-top:50px; margin-right:30px;}
-#passwordFindForm .passwordform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s;}
+#passwordFindForm .passwordform input{width:240px; height:45px; margin-top:50px; margin-right:30px;font-size:18px;}
+#passwordFindForm .passwordform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:white; font-weight:bold;cursor:pointer; transition:0.4s;}
 #passwordFindForm .passwordform input[type=button]:hover{background:#FFCA28;}
-#passwordFindForm .passwordform button{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s; display:none;}
-#passwordFindForm .passwordform button:hover{background:#FFCA28;}
-#passwordFindForm .passwordform #passfind{width:100%; float:left; text-align:center; margin-top:10px;}
+#passwordFindForm .passwordform button{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:white; cursor:pointer; transition:0.4s; display:none; font-size:18px; font-weight:bold}
+#passwordFindForm .passwordform button:hover{background:#FFCA28; font-size:18px;}
+#passwordFindForm .passwordform #passfind{width:100%; float:left; font-size:18px;text-align:center; margin-top:10px;}
 
-/* ¸¶ÀÏ¸®Áö ÃæÀü dialog*/
+/* ï¿½ï¿½ï¿½Ï¸ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ dialog*/
 .chargedialog{display:none;}
 #chargeform{width:100%; height: 100%; float:left; text-align: center;}
-#chargeform input[type=number]{width:70%; height: 50px; float:left; margin:80px;}
+#chargeform input[type=number]{width:70%; height: 50px; float:left; margin:80px;font-size:18px;}
 
-#chargeform input[type=button]{width:120px; height:45px; background: #FFCA28; border:1px solid #FF8F00; color:#fff; cursor:pointer; transition:0.4s; margin-bottom:45px;}
+#chargeform input[type=button]{width:120px; height:45px; background: #FFCA28; border:1px solid #FF8F00; color:#fff; cursor:pointer; transition:0.4s; margin-bottom:45px;font-weight:bold;font-size:18px;}
 #chargeform input[type=button]:hover{background:#FFB300;}
 
-/* ±¸¸Å dialog */
+/* ï¿½ï¿½ï¿½ï¿½ dialog */
 .purchasedialog{display:none;}
 #purchaseform{width:100%; height: 100%; float:left; text-align: center;}
 #purchaseform input[type=number]{width:70%; height: 50px; float:left; margin:80px;}
@@ -339,7 +341,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #purchaseform input[type=button]{width:120px; height:45px; background: #FFCA28; border:1px solid #FF8F00; color:#fff; cursor:pointer; transition:0.4s; margin-bottom:45px;}
 #purchaseform input[type=button]:hover{background:#FFB300;}
 
-/* ±¸¸Å ½ÅÃ»¶õ dialog */
+/* ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½Ã»ï¿½ï¿½ dialog */
 .purchaselistdialog{display:none}
 
 #purchaselistform{width:100%; height:530px; float:left;   position: relative;  }
