--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -23,10 +23,6 @@ header .menu ul li:nth-child(1):hover{color:#000;}
 header .menu ul li::before{content:""; width:100%; height:10px; background:#FFCA28; float:left; position: absolute; top:-100%;; left:0; transition:0.4s;}
 header .menu ul li:hover::before{top:0;}
 header .menu ul li:nth-child(1):hover::before{top:-100%;}
-/* header .menu ul li::before{content:""; width:100%; height:3px; background:#FF8F00; float:left; position: absolute; top:0; left:100%; transition:0.4s;}
-header .menu ul li::after{content:""; width:100%; height:3px; background:#FF8F00; float:left; position: absolute; bottom:0; right:100%; transition:0.4s;}
-header .menu ul li:hover::before{left:0;}
-header .menu ul li:hover::after{right:0;} */
 header .icon{width: 143px; float:left;}
 header .icon a{text-decoration:none; color: inherit; float:left; }
 
@@ -38,12 +34,12 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 
 
 #profile{width:100%; height:100%; float:left; position: absolute; overflow: hidden;}
-#profile .profilemenu{width:350px; height: 100%; background:#FFCA28; float:right; z-index:5; position: absolute; top:0 ; right:-350px;  }
+#profile .profilemenu{width:350px; height: 100%; background:#FFCA28; float:right; z-index:5; position: absolute; top:0 ; right:-350px; }
 #profile .profilemenu ul li{text-align:center; line-height:50px; border-bottom:1px solid #FF8F00; color:#fff; font-size:18px;font-weight:bold;transition:0.4s;}
 #profile .profilemenu ul li #chatWindow{width:100%; float:left; color:#000; overflow: scroll; overflow-x:hidden; font-size:14px;}
 #profile .profilemenu ul li #submit{line-height: 40px;}
-#profile .profilemenu ul li #partnerId{background: #fff; font-size:14px;}
-#profile .profilemenu ul li #message{background: #fff; font-size:14px;}
+#profile .profilemenu ul li #partnerId{background: #fff;color:#000; font-size:14px;}
+#profile .profilemenu ul li #message{background: #fff; color:#000; font-size:14px;}
 #profile .profilemenu ul li:nth-child(1){position: relative;}
 #profile .profilemenu ul #transactionsEvent{cursor:pointer;}
 #profile .profilemenu ul #cashTransactionsEvent{cursor:pointer;}
@@ -351,4 +347,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 
 @media(max-width:1020px){
 	#main .mainEx{width:40%; height: 417px; float:right; margin-left:0; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
+}
+@media(max-height:638px){
+  #profile .profilemenu{overflow: scroll; overflow-x:hidden;}
 }
