--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -182,7 +182,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #memberup .memberupform form ul li:nth-child(2) input{width:70%; border:none; border-left:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00; }
 #memberup .memberupform form ul li input{width:100%;height: 100%;float:left;  background:#FFCA28;   border:1px solid #FF8F00;}
 #memberup .memberupform form ul li input[name=id]{width:60%;}
-#memberup .memberupform form ul li #check{width:40%; height: 100%; line-height:50px; float:left;  background:#FFCA28; border-right:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00 }
+#memberup .memberupform form ul li #check{font-size:14px; width:40%; height: 100%; line-height:50px; float:left;  background:#FFCA28; border-right:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00 }
 #memberup .memberupform .memberupsubmit{width:100%; float:left; text-align:center;}
 #memberup .memberupform .memberupsubmit input{width:120px; height: 40px; background:#FFD54F; border:1px solid #FF8F00; color:#fff; text-align: center;}
 
